--- a/frontend/pug/sass/_vars.scss
+++ b/frontend/pug/sass/_vars.scss
@@ -1,12 +1,12 @@
-$default-font: sans-serif;
+$default-font: "Roboto", sans-serif;
 
 $background-color: #ffffff;
-$s-background-color: #ff8d2c;
+$s-background-color: #f8f8f8;
+$b-background-color: #ebf5fb;
 
-$p-active-color: #27ae60;
-$s-active-color: #ff8d2c;
+$p-active-color: #ff7373;
+$s-active-color: #ffffff;
 
-$p-text-color: #222222;
+$p-text-color: #3f3f3f;
 $s-text-color: #ffffff;
-$g-text-color: #4b4b4b;
-$o-text-color: #ff8d2c;
+$b-text-color: #8cc3e2;
