--- a/frontend/pug/pages/index/_header.pug
+++ b/frontend/pug/pages/index/_header.pug
@@ -1,1 +1,23 @@
-header.header
+header.header._s
+  ._container._row
+    h1.header__caption._col-12
+      | Безопасно, легко и&nbsp;комфортно
+    .header__top-text._col-12
+      | Хочешь купить или продать недвижимость?
+      br
+      | Мы&nbsp;поможем!
+    .header__bot-text._left._col-6
+      | 950&nbsp;000 куплено
+    .header__bot-text._col-6
+      | 890&nbsp;000 продано
+    .header__button-box._left._col-6
+      .switch
+        label.switch__label
+          input.switch__radio(type="radio" name="who" checked)
+          .switch__button Купить
+        label.switch__label
+          input.switch__radio(type="radio" name="who")
+          .switch__button Продать
+
+    .header__button-box._col-6
+      button.button(type="button") Заполнить анкету
