--- a/frontend/pug/sass/index.scss
+++ b/frontend/pug/sass/index.scss
@@ -134,7 +134,7 @@ strong {
   background-color: $p-active-color;
   border: 1px solid $p-active-color;
   box-shadow: 0 3px 1px -2px rgba(0,0,0,0.2), 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12);
-  text-transform: none;
+  text-transform: uppercase;
   text-decoration: none;
   cursor: pointer;
   &:focus, &:active, &:hover {
@@ -177,6 +177,60 @@ strong {
   }
 }
 
+.switch {
+  display: flex;
+  width: 290px;
+  justify-content: space-between;
+  border-radius: 5px;
+  border: 2px solid $background-color;
+  background-color: #fff;
+  box-sizing: border-box;
+  &__label {
+    display: block;
+    width: 100%;
+    max-width: 142px;
+    min-height: 40px;
+  }
+  &__button {
+    width: 100%;
+    max-width: 142px;
+    min-height: 40px;
+    display: flex;
+    justify-content: center;
+    padding: 5px 8px;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 1.125rem;
+    outline: none;
+    box-sizing: border-box;
+    transition: all .7s ease;
+    align-items: center;
+    font-weight: 500;
+    color: $p-text-color;
+    background-color: $background-color;
+    text-transform: uppercase;
+    text-decoration: none;
+    cursor: pointer;
+    &:focus, &:active, &:hover {
+      color: $p-active-color;
+    }
+  }
+  &__radio {
+    display: none;
+  }
+  &__radio:checked + &__button {
+    color: $s-text-color;
+    background-color: $p-active-color;
+  }
+}
+
+._p {
+  color: $p-text-color;
+}
+
+._s {
+  color: $s-text-color;
+}
 
 @import "grid";
 @import "media";
