--- a/frontend/pug/pages/user-profile.pug
+++ b/frontend/pug/pages/user-profile.pug
@@ -2,57 +2,61 @@ extends layout/main
 
 block content
   ._container._row.user-profile
-    .page-name._col-12
+    .user-profile-header._col-12
       h2
         |Личный кабинет
     ._col-8._offset-4.user-edit
       |Редактировать
-    ._col-4.user-image
-      img(src="https://placehold.it/211x211" alt="user-image")
+    ._col-4.user-photo
+      .user-avatar
+        img(src="https://placehold.it/211x211" alt="user-image")
+        .plus-btn
+          p
+            |+
     ._col-4
       .user-info
         ul
           li
-            p.user-profile-p
+            p
               |ФИО
-            h3.user-profile-h3
+            h3
               |Белоцерковский Александр Александрович
           li
-            p.user-profile-p
+            p
               |Дата рождения
-            h3.user-profile-h3
+            h3
               |18.06.1990
           li
-            p.user-profile-p
+            p
               |Номер телефона
-            h3.user-profile-h3
+            h3
               |8 (425) 987-56-25
           li
-            p.user-profile-p
+            p
               |E-mail
-            h3.user-profile-h3
+            h3
               |belotserkovskiaa@gmail.com
     ._col-4.user-rate
-      p.user-profile-p
+      p
         |Мой тариф:
-      h3.user-profile-h3
+      h3
         |Стандарт
       .rate-info
         .info-line
-          .progress-line
+          .info-line.progress
         .line-info
           h4
             |5/7
           span
             |экспертных оценок объекта
         .info-line
-          .progress-line
+          .info-line.progress
         .line-info
           h4
             |9/12
           span
             |видеопросмотров объекта
-        .button.btn-vip
+        .button.btn-buy-vip
           |ТАРИФ VIP
     ._col-8._offset-4.user-balance
       p.user-profile-p
