completion product-page

--- a/frontend/pug/pages/product-page.pug
+++ b/frontend/pug/pages/product-page.pug
@@ -56,7 +56,7 @@ block content
                             |этаж
         ._col-2
             |слайдер
-        ._col-4.product-info
+        ._col-4.product-place
             p
                 |Шелепиха
             ._col-12.product-price
@@ -82,4 +82,50 @@ block content
                 a.link.top-menu__icon._heart
             ._col-9.get-video
                 span
-                    |ПОЛУЧИТЬ ВИДЕОПРОСМОТР      
+                    |ПОЛУЧИТЬ ВИДЕОПРОСМОТР
+        ._col-6.porduct-info
+            h3
+                |В цифрах
+            div   
+                .info-string  
+                    p.second-p
+                        |Жилая
+                    p
+                        |56 м2
+                .info-string  
+                    p.second-p
+                        |Высота потолков
+                    p
+                        |4.3 м
+                .info-string  
+                    p.second-p
+                        |Санузел
+                    p
+                        |совмещенный
+                .info-string  
+                    p.second-p
+                        |Балкон
+                    p
+                        |1
+                .info-string  
+                    p.second-p
+                        |Ремонт
+                    p
+                        |евро
+                .info-string  
+                    p.second-p
+                        |Вид из окон
+                    p
+                        |во двор
+        ._col-5._offset-1.porduct-info
+            h3
+                |Описание
+            p
+                |Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis sit, praesentium quos repellendus reprehenderit ab minima consectetur rem necessitatibus. Quidem ea excepturi architecto ratione deserunt nulla officia aperiam debitis voluptatem?    
+            p
+                |Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis sit, praesentium quos repellendus reprehenderit ab minima consectetur rem necessitatibus. Quidem ea excepturi architecto ratione deserunt nulla officia aperiam debitis voluptatem?
+        ._col-12.location
+            h3
+                |Месторасположение
+        ._col-12
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Add6bb26c22e386bacbce28bea785a1cb824be49f949ca981e3f6096b7002f9db&amp;width=100%25&amp;height=369&amp;lang=ru_RU&amp;scroll=true"></script>
