--- a/frontend/pug/sass/layout/product-page.scss
+++ b/frontend/pug/sass/layout/product-page.scss
@@ -62,7 +62,7 @@
     }
 }
 
-.product-info {
+.product-place {
     & p {
         font-family: Roboto;
         font-style: normal;
@@ -114,16 +114,62 @@
         max-width: 318px;
         height: 52px;
         margin-right: 35px;
-    } 
+    }
 }
 
 .get-video {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    text-decoration-line: underline;
+    color: #8cc3e2;
+}
+
+.porduct-info {
+    padding-top: 133px;
+    & h3 {
         font-family: Roboto;
         font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 19px;
-        text-align: center;
-        text-decoration-line: underline;
-        color: #8cc3e2;
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 28px;
+        color: #ff7373;
     }
+    & p {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 21px;
+        color: #3f3f3f;
+    }
+    & .info-string {
+        display: flex;
+        justify-content: space-between;
+        & .second-p {
+            color: #828282;
+        }
+        & .empty-line {
+            max-width: 100%;
+            height: 16px;
+            border-bottom: 1px solid #e0e0e0;
+        }
+        &:first-child {
+            padding-top: 33px;
+        }
+    }
+}
+
+.location {
+    & h3 {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 28px;
+        color: #ff7373;
+    }
+}
