--- a/frontend/pug/sass/layout/main.scss
+++ b/frontend/pug/sass/layout/main.scss
@@ -3,3 +3,9 @@
 @import "user-profile";
 @import "user-profile-edit";
 @import "product-page";
+@import "service";
+@import "attachment";
+@import "cost";
+@import "offers";
+@import "promotions";
+@import "footer";
