--- a/frontend/pug/pages/index.pug
+++ b/frontend/pug/pages/index.pug
@@ -2,4 +2,8 @@ extends layout/main
 
 block content
   include index/_header
-  include index/_theme
+  include index/_service
+  include index/_attachment
+  include index/_cost
+  include index/_offers
+  include index/_promotions
