--- a/frontend/pug/pages/index/_header.pug
+++ b/frontend/pug/pages/index/_header.pug
@@ -1,6 +1,6 @@
 header.header._s
   ._container._row
-    h1.header__caption._col-12
+    h1.header__caption._s._col-12
       | Безопасно, легко и&nbsp;комфортно
     .header__top-text._col-12
       | Хочешь купить или продать недвижимость?
