--- a/frontend/pug/sass/layout/_offers.scss
+++ b/frontend/pug/sass/layout/_offers.scss
@@ -21,8 +21,7 @@
     display: flex;
     position: relative;
     width: 100%;
-    background-color: #fff;
-    padding: 8px 0;
+    padding: 8px 0 0;
   }
   &__line-img {
     height: 72px;
@@ -49,7 +48,6 @@
     width: 88px;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
     opacity: 0.6;
     font-size: 1.125rem;
     font-weight: 500;
