--- a/frontend/pug/sass/layout/_offers.scss
+++ b/frontend/pug/sass/layout/_offers.scss
@@ -15,7 +15,6 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    background-color: #fff;
   }
   &__line-img-box {
     display: flex;
@@ -48,7 +47,7 @@
     width: 88px;
     justify-content: center;
     align-items: center;
-    opacity: 0.6;
+    background-color: rgba(255, 255, 255, 0.6);
     font-size: 1.125rem;
     font-weight: 500;
     &:before {
