Add last index blocks

--- a/frontend/pug/pages/index.pug
+++ b/frontend/pug/pages/index.pug
@@ -7,3 +7,5 @@ block content
   include index/_cost
   include index/_offers
   include index/_promotions
+  include index/_rates
+  include index/_additional
