--- a/frontend/pug/pages/index/_service.pug
+++ b/frontend/pug/pages/index/_service.pug
@@ -1,4 +1,4 @@
-section.service._container._row
+.service._container._row
   ._col-12._col-lg-4.service__item._i1
     | индивидуальный подход
     br
