--- a/frontend/pug/pages/index/_header.pug
+++ b/frontend/pug/pages/index/_header.pug
@@ -14,7 +14,7 @@ header.header._s
       .switch
         label.switch__label
           input.switch__radio(type="radio" name="who" checked)
-          .switch__button Купить
+          span.switch__button Купить
         label.switch__label
           input.switch__radio(type="radio" name="who")
           .switch__button Продать
