--- a/frontend/pug/pages/index/_additional.pug
+++ b/frontend/pug/pages/index/_additional.pug
@@ -1,4 +1,4 @@
-section.additional._container._row
+section.additional._container._row._p-t
   h3.additional__caption._col-12
     | Дополнительные услуги
   ._col-12._col-md-6._col-lg-4
