--- a/frontend/pug/pages/index/_offers.pug
+++ b/frontend/pug/pages/index/_offers.pug
@@ -1,9 +1,9 @@
-section.offers._container._row
+section.offers._container._row._p-t
   h3._col-12.offers__caption
     | Горячие предложения
   .offers__sub-caption._col-12
     | 1-комнатные
-  ._col-12.swiper-container#offers1
+  ._col-12.swiper-container.swiper4#offers1
     .swiper-wrapper
       .swiper-slide
         .offers__item._row
@@ -141,7 +141,7 @@ section.offers._container._row
     .swiper__btn-next#offers1-next
   .offers__sub-caption._col-12
     | 2-комнатные
-  ._col-12.swiper-container#offers2
+  ._col-12.swiper-container.swiper4#offers2
     .swiper-wrapper
       .swiper-slide
         .offers__item._row
