--- a/frontend/pug/pages/index/_promotions.pug
+++ b/frontend/pug/pages/index/_promotions.pug
@@ -1,8 +1,8 @@
-section.promotions._container._row
+section.promotions._container._row._p-t
   h3.promotions__caption._col-12
     | Наши акции
     a.link.promotions__link(href="#") Смотреть все
-  ._col-12.swiper-container#promotions
+  ._col-12.swiper-container.swiper4#promotions
     .swiper-wrapper
       .swiper-slide
         .promotions__item
