--- a/frontend/pug/pages/index/_rates.pug
+++ b/frontend/pug/pages/index/_rates.pug
@@ -1,4 +1,4 @@
-section.rates._container._row
+section.rates._container._row._p-t
   h3.rates__caption._col-12
     | Тарифы
   ._col-12._col-md-6._col-lg-4
