--- a/frontend/pug/pages/index/_similar.pug
+++ b/frontend/pug/pages/index/_similar.pug
@@ -1,7 +1,7 @@
-section.offers._container._row
+section.offers._container._row._p-t
   h3._col-12.additional__caption
     | Похожие объявления рядом
-  ._col-12.swiper-container#similar
+  ._col-12.swiper-container.swiper4#similar
     .swiper-wrapper
       .swiper-slide
         .offers__item._row
