--- a/frontend/pug/sass/layout/_offers.scss
+++ b/frontend/pug/sass/layout/_offers.scss
@@ -1,3 +1,5 @@
+@import "../vars";
+
 .offers {
   &__sub-caption {
     font-size: 1.5rem;
@@ -7,6 +9,9 @@
     background-color: #ebf5fb;
     border-radius: 10px;
     overflow: hidden;
+    &:hover {
+      color: $p-text-color;
+    }
   }
   &__top-img {
     width: 100%;
