fix slider, add container

--- a/frontend/pug/pages/index/_offers.pug
+++ b/frontend/pug/pages/index/_offers.pug
@@ -24,7 +24,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               a.button(href="/card.html") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -46,7 +46,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               a.button(href="/card.html") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -68,7 +68,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               a.button(href="/card.html") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -90,7 +90,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               a.button(href="/card.html") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -112,7 +112,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               a.button(href="/card.html") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -134,7 +134,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               a.button(href="/card.html") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
     .swiper__btn-prev#offers1-prev
@@ -162,7 +162,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               a.button(href="/card.html") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -184,7 +184,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               a.button(href="/card.html") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -206,7 +206,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               a.button(href="/card.html") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -228,7 +228,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               a.button(href="/card.html") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -250,7 +250,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               a.button(href="/card.html") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -272,7 +272,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               a.button(href="/card.html") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
     .swiper__btn-prev#offers2-prev
