--- a/frontend/pug/sass/layout/_offers.scss
+++ b/frontend/pug/sass/layout/_offers.scss
@@ -99,7 +99,7 @@
       background-image: url(../svg/mdi_location.svg);
     }
   }
-  &__botton-box {
+  &__button-box {
     display: flex;
     width: 100%;
     align-items: center;
