--- a/frontend/pug/pages/index/_similar.pug
+++ b/frontend/pug/pages/index/_similar.pug
@@ -22,7 +22,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               label.button(for="") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -44,7 +44,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               label.button(for="") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -66,7 +66,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               label.button(for="") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -88,7 +88,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               label.button(for="") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -110,7 +110,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               label.button(for="") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
       .swiper-slide
@@ -132,7 +132,7 @@ section.offers._container._row._p-t
                 | 1-комн. квартира
               .offers__info-item._address
                 | Москва, деревня Новофедоровская, ул.&nbsp;Десятинная
-            .offers__botton-box
+            .offers__button-box
               label.button(for="") Посмотреть
               a.link.top-menu__icon._heart._offers(href="/#")
     .swiper__btn-prev#similar-prev
