--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,36 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="text_h1">
+        <item name="android:textSize">42sp</item>
+        <item name="android:textColor">@color/colorTextBlack</item>
+    </style>
+
+    <style name="text_normal">
+        <item name="android:textColor">@color/colorTextBlack</item>
+    </style>
+
+    <style name="red_button">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:textColor">@color/colorTextBlack</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/btn_red_background</item>
+        <item name="android:elevation">4dp</item>
+    </style>
+
+    <style name="white_button">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:textColor">@color/colorTextBlack</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/btn_white_background</item>
     </style>
 
 </resources>
