--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,16 @@
     <color name="colorTextBlack">#000000</color>
     <color name="colorTextBlue">#6C99B3</color>
     <color name="colorRedBtn">#FF7373</color>
+
+    <color name="colorVeryLight">#F1F5F6</color>
+    <color name="colorLight">#E1E6E9</color>
+    <color name="colorGray">#92979A</color>
+    <color name="colorBlack">#0D0E0E</color>
+    <color name="colorBlueLight">#ADD9F2</color>
+    <color name="colorAccent_">#FF8170</color>
+    <color name="colorBlueRegular">#6C99B2</color>
+    <color name="colorLineLightGray">#E1E6E9</color>
+    <color name="colorLineBlue">#8CC3E2</color>
+    <color name="colorBlueVeryLight">#F6FCFF</color>
+    <color name="colorError">#C90101</color>
 </resources>
