--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -1,13 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBlueVeryLight"
     tools:context=".ui.fragments.RegistrationFragment">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@id/textView2"
+        android:layout_width="204dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="102dp"
+        android:text="@string/registrations"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/buttonGoogle"
+        style="@style/white_button_google_registration"
+        android:layout_marginStart="@dimen/normal_margin"
+        android:layout_marginTop="117dp"
+        android:layout_marginEnd="@dimen/normal_margin"
+        android:textColor="@color/colorAccent_"
+        android:text="@string/registration_through_google"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/onlyText"
+        android:layout_width="148dp"
+        android:layout_height="16dp"
+        android:layout_marginTop="32dp"
+        android:gravity="center"
+        android:text="@string/or_enter_number"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/colorGray"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonGoogle" />
+
+    <EditText
+        android:id="@+id/enter_phone_fragment_edit_text"
+        style="@style/white_edit"
+        android:layout_marginStart="@dimen/normal_margin"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="@dimen/normal_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/onlyText" />
+
+    <Button
+        android:id="@+id/buttonRegistrations"
+        style="@style/red_button"
+        android:layout_marginStart="@dimen/normal_margin"
+        android:layout_marginTop="@dimen/big_margin"
+        android:layout_marginEnd="@dimen/normal_margin"
+        android:text="@string/to_register"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/enter_phone_fragment_edit_text" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="206dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="47dp"
+        android:gravity="center"
+        android:text="@string/registration_conditions"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrations" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
