--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,4 +33,25 @@
         <item name="android:background">@drawable/btn_white_background</item>
     </style>
 
+    <style name="white_button_google_registration">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:textColor">@color/colorTextBlack</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/btn_white_background_google</item>
+    </style>
+
+    <style name="white_edit">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:ems">10</item>
+        <item name="android:hint">@string/you_phone_number</item>
+        <item name="android:inputType">phone</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1</item>
+        <item name="android:textColor">@color/colorTextBlack</item>
+        <item name="android:gravity">center|start</item>
+        <item name="android:background">@drawable/edit_white_background</item>
+    </style>
+
 </resources>
