--- a/app/src/main/res/layout/fragment_enter_phone_number.xml
+++ b/app/src/main/res/layout/fragment_enter_phone_number.xml
@@ -6,15 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.EnterPhoneNumberFragment">
 
+    <TextView
+        android:id="@id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="102dp"
+        android:text="@string/registrations"
+        android:textSize="34sp"
+        android:textColor="@color/colorTextBlack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/enter_phone_fragment_edit_text"
         style="@style/white_edit"
         android:layout_marginStart="@dimen/normal_margin"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="102dp"
         android:layout_marginEnd="@dimen/normal_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/textView2" />
 
     <TextView
         android:id="@+id/enter_phone_fragment_ok_btn"
@@ -22,7 +34,7 @@
         android:layout_marginStart="@dimen/normal_margin"
         android:layout_marginEnd="@dimen/normal_margin"
         android:layout_marginBottom="@dimen/big_margin"
-        android:text="ПОДТВЕРДИТЬ"
+        android:text="@string/confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
