--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -9,11 +9,12 @@
 
     <TextView
         android:id="@id/textView2"
-        android:layout_width="204dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="102dp"
         android:text="@string/registrations"
         android:textSize="34sp"
+        android:textColor="@color/colorTextBlack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,13 +27,15 @@
         android:layout_marginEnd="@dimen/normal_margin"
         android:textColor="@color/colorAccent_"
         android:text="@string/registration_through_google"
+        android:drawableStart="@drawable/ic_logo_google"
+        android:paddingStart="@dimen/big_margin"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
-        android:id="@+id/onlyText"
+        android:id="@+id/registration_fragment_or_phone_text"
         android:layout_width="148dp"
         android:layout_height="16dp"
         android:layout_marginTop="32dp"
@@ -40,23 +43,23 @@
         android:text="@string/or_enter_number"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/colorGray"
-        android:textSize="10sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonGoogle" />
 
     <EditText
-        android:id="@+id/enter_phone_fragment_edit_text"
+        android:id="@+id/registration_fragment_edit_text"
         style="@style/white_edit"
         android:layout_marginStart="@dimen/normal_margin"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="@dimen/normal_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/onlyText" />
+        app:layout_constraintTop_toBottomOf="@+id/registration_fragment_or_phone_text" />
 
     <Button
-        android:id="@+id/buttonRegistrations"
+        android:id="@+id/registration_fragment_reg_btn"
         style="@style/red_button"
         android:layout_marginStart="@dimen/normal_margin"
         android:layout_marginTop="@dimen/big_margin"
@@ -64,18 +67,18 @@
         android:text="@string/to_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enter_phone_fragment_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/registration_fragment_edit_text" />
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="206dp"
-        android:layout_height="32dp"
+        android:id="@+id/registration_fragment_conditions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="47dp"
         android:gravity="center"
         android:text="@string/registration_conditions"
-        android:textSize="10sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrations" />
+        app:layout_constraintTop_toBottomOf="@+id/registration_fragment_reg_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
