--- a/app/src/main/res/drawable/ic_turned.xml
+++ b/app/src/main/res/drawable/ic_turned.xml
@@ -1,23 +1,9 @@
-<vector
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="14dp"
-    android:height="18dp"
-    android:viewportWidth="14"
-    android:viewportHeight="18"
-    >
-
-    <group>
-
-        <clip-path
-            android:pathData="M0 0H14V18H0V0Z"
-            />
-
-        <path
-            android:pathData="M0 0V18H14V0"
-            android:fillColor="#000000"
-            />
-
-    </group>
-
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="25dp"
+    android:viewportWidth="24"
+    android:viewportHeight="25">
+  <path
+      android:pathData="M17,3.6977H7C5.9,3.6977 5.01,4.5977 5.01,5.6977L5,21.6977L12,18.6977L19,21.6977V5.6977C19,4.5977 18.1,3.6977 17,3.6977ZM17,18.6977L12,16.5177L7,18.6977V5.6977H17V18.6977Z"
+      android:fillColor="#000000"/>
 </vector>
