add render card db

--- a/frontend/pug/pages/layout/main.pug
+++ b/frontend/pug/pages/layout/main.pug
@@ -6,8 +6,8 @@ html(lang="ru-RU")
     .wrapper
       include _counters
       .wrap-container
-        include _top-menu
+        block top-menu
         main.main
           block content
-      include _footer
-    include _end
+      block footer
+    block end
