--- a/frontend/pug/pages/card.pug
+++ b/frontend/pug/pages/card.pug
@@ -1,6 +1,15 @@
 extends layout/main
 
+block top-menu
+  include layout/_top-menu
+
 block content
   include index/_card-info
   include index/_map-info
   include index/_similar
+
+block footer
+  include layout/_footer
+
+block end
+  include layout/_end
