--- a/frontend/pug/pages/index.pug
+++ b/frontend/pug/pages/index.pug
@@ -1,5 +1,8 @@
 extends layout/main
 
+block top-menu
+  include layout/_top-menu
+
 block content
   include index/_header
   include index/_service
@@ -9,3 +12,9 @@ block content
   include index/_promotions
   include index/_rates
   include index/_additional
+
+block footer
+  include layout/_footer
+
+block end
+  include layout/_end
