--- a/frontend/pug/pages/personal.pug
+++ b/frontend/pug/pages/personal.pug
@@ -1,4 +1,13 @@
 extends layout/main
 
+block top-menu
+  include layout/_top-menu
+
 block content
   include index/_theme
+
+block footer
+  include layout/_footer
+
+block end
+  include layout/_end
