--- a/frontend/pug/sass/index.scss
+++ b/frontend/pug/sass/index.scss
@@ -62,6 +62,10 @@ body {
   white-space: nowrap;
 }
 
+._hidden {
+  display: none;
+}
+
 h1, h2, h3, h4, h5, h6, .body0 {
   margin: 0;
   font-size: 1.25rem;
@@ -155,7 +159,7 @@ strong {
 }
 
 .input {
-  max-width: 230px;
+  max-width: 280px;
   background-color: $background-color;
   border-color: $p-active-color;
   text-align: left;
@@ -241,8 +245,6 @@ strong {
 
 @import "grid";
 @import "media";
-
-@import "layout/main";
 
 .modal {
   position:fixed;
