--- a/frontend/pug/sass/layout/_offers.scss
+++ b/frontend/pug/sass/layout/_offers.scss
@@ -6,6 +6,8 @@
     padding-bottom: 0;
   }
   &__item {
+    height: 100%;
+    flex-direction: column;
     background-color: #ebf5fb;
     border-radius: 10px;
     overflow: hidden;
@@ -24,7 +26,9 @@
     display: flex;
     position: relative;
     width: 100%;
+    height: 80px;
     padding: 8px 0 0;
+    box-sizing: border-box;
   }
   &__line-img {
     height: 72px;
@@ -54,13 +58,11 @@
     background-color: rgba(255, 255, 255, 0.6);
     font-size: 1.125rem;
     font-weight: 500;
-    &:before {
-      content: '+';
-    }
   }
   &__bottom {
     padding: 16px;
     align-items: flex-end;
+    flex-grow: 1;
   }
   &__cost {
     font-size: 1.75rem;
@@ -78,9 +80,6 @@
   &__cost-m {
     width: 100%;
     font-size: 0.875rem;
-    &:after {
-      content: '/м2';
-    }
   }
   &__info-box {
     padding: 20px 0;
