--- a/frontend/pug/sass/layout/_top-menu.scss
+++ b/frontend/pug/sass/layout/_top-menu.scss
@@ -68,4 +68,16 @@
       box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
     }
   }
+  &__button-box {
+    padding: 0 15px;
+    box-sizing: border-box;
+  }
+}
+
+@media (max-width: 991px) {
+  .top-menu {
+    &__nav {
+      display: none;
+    }
+  }
 }
