fragment_card_of_apartment.xml and CardOfApartmentFragment.kt (not finish)

--- a/app/src/main/res/layout/item_apartment.xml
+++ b/app/src/main/res/layout/item_apartment.xml
@@ -55,7 +55,7 @@
             android:id="@+id/textApartmentAttribute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/normal_margin"
             android:layout_marginTop="2dp"
             android:textColor="@color/colorBlack"
             app:layout_constraintStart_toStartOf="parent"
