DC-create_addCard. Начал верстать 3 страницу

--- a/frontend/src/layouts/add-card.scss
+++ b/frontend/src/layouts/add-card.scss
@@ -21,6 +21,12 @@
   }
 
   &_flex {
-    display: flex
+    display: flex;
+  }
+
+  &-fieldsBlock {
+    .DC-inputField:first-child {
+      margin-right: 100px;
+    }
   }
 }
