--- a/frontend/src/layouts/add-card.scss
+++ b/frontend/src/layouts/add-card.scss
@@ -22,10 +22,15 @@
 
   &_flex {
     display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+  &_wrapReverse {
+    flex-wrap: wrap-reverse;
   }
 
   &-fieldsBlock {
-    .DC-inputField:first-child {
+    .DC-inputField:not(:last-child) {
       margin-right: 100px;
     }
   }
