--- a/frontend/src/assets/_vars.scss
+++ b/frontend/src/assets/_vars.scss
@@ -1,4 +1,4 @@
-$default-font: "Roboto", sans-serif;
+$default-font: 'Roboto', sans-serif;
 
 $background-color: #ffffff;
 $s-background-color: #f8f8f8;
