--- a/frontend/src/components/DCInputField/style.scss
+++ b/frontend/src/components/DCInputField/style.scss
@@ -1,61 +1,61 @@
 .DC-inputField {
-  margin-bottom: 24px;
+    margin-bottom: 24px;
 
-  .DC-label {
-    display: flex;
-    flex-direction: column;
-    font-size: 32px;
-    line-height: 37px;
+    .DC-label {
+        display: flex;
+        flex-direction: column;
+        font-size: 32px;
+        line-height: 37px;
 
-    span {
-      margin-bottom: 24px;
+        span {
+            margin-bottom: 24px;
+        }
+
+        .DC-input {
+            font-size: 16px;
+            line-height: 19px;
+            border: none;
+            border-bottom: 1px solid #828282;
+        }
+        .DC-input::placeholder {
+            color: #828282;
+        }
+        .DC-input:focus {
+            outline: none;
+        }
+
+        .commentSpan {
+            display: inline-block;
+            margin-left: 25px;
+            background-image: url('../../assets/svg/icon_comment.svg');
+            background-repeat: no-repeat;
+            background-position: left center;
+            font-size: 18px;
+            color: #8cc3e2;
+            padding-left: 30px;
+        }
+
+        .DC-label-background-noBackground {
+            background: none;
+            padding-left: 0;
+        }
     }
 
-    .DC-input {
-      font-size: 16px;
-      line-height: 19px;
-      border: none;
-      border-bottom: 1px solid #828282;
-    }
-    .DC-input::placeholder {
-      color: #828282;
-    }
-    .DC-input:focus {
-      outline: none;
+    .DC-label.DC-label-size-subheader {
+        font-size: 24px;
+        line-height: 28px;
     }
 
-    .commentSpan {
-      display: inline-block;
-      margin-left: 25px;
-      background-image: url("../../assets/svg/icon_comment.svg");
-      background-repeat: no-repeat;
-      background-position: left center;
-      font-size: 18px;
-      color: #8cc3e2;
-      padding-left: 30px;
+    .DC-label.DC-label-size-small {
+        font-size: 18px;
+        line-height: 21px;
     }
 
-    .DC-label-background-noBackground {
-      background: none;
-      padding-left: 0;
+    .DC-label.DC__label_color-blue {
+        color: #8cc3e2;
     }
-  }
-
-  .DC-label.DC-label-size-subheader {
-    font-size: 24px;
-    line-height: 28px;
-  }
-
-  .DC-label.DC-label-size-small {
-    font-size: 18px;
-    line-height: 21px;
-  }
-
-  .DC-label.DC__label_color-blue {
-    color: #8cc3e2;
-  }
 }
 
 .DC-inputField._col {
-  padding: 0;
+    padding: 0;
 }
